WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111755
AX: Can't activate links with VoiceOver in Safari
https://bugs.webkit.org/show_bug.cgi?id=111755
Summary
AX: Can't activate links with VoiceOver in Safari
chris fleizach
Reported
2013-03-07 10:52:01 PST
1. open mail.google.com in safari 2. navigate to your list of messages 3. either tab or VO navigate to the link for the message just after the check box for that message and VO press on it 4. you hear "AX scroll to visible link" but nothing happens I am not attaching an archive to this message as it contains personal data however it should be easily reproducible
Attachments
patch
(8.14 KB, patch)
2013-03-07 11:04 PST
,
chris fleizach
bdakin
: review+
cfleizach
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2013-03-07 10:52:26 PST
The order of the accessibility actions is apparently very important. We moved the Press action in the list to item 3, and hence the problems
chris fleizach
Comment 2
2013-03-07 11:04:59 PST
Created
attachment 192049
[details]
patch
chris fleizach
Comment 3
2013-03-07 11:05:15 PST
adding tim to help with review
Tim Horton
Comment 4
2013-03-07 11:15:51 PST
View in context:
https://bugs.webkit.org/attachment.cgi?id=192049&action=review
> Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:921 > + // Action elements allow Press. Order is very important. Press needs to be first.
This really needs a "why".
> Tools/DumpRenderTree/AccessibilityUIElement.cpp:1069 > +#endif // PLATFORM(MAC) && !PLATFORM(IOS)
This is a short enough block, we don't need to repeat the condition.
chris fleizach
Comment 5
2013-03-07 11:36:25 PST
(In reply to
comment #4
)
> View in context:
https://bugs.webkit.org/attachment.cgi?id=192049&action=review
> > > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:921 > > + // Action elements allow Press. Order is very important. Press needs to be first. > > This really needs a "why". > > > Tools/DumpRenderTree/AccessibilityUIElement.cpp:1069 > > +#endif // PLATFORM(MAC) && !PLATFORM(IOS) > > This is a short enough block, we don't need to repeat the condition.
Will fix. Thanks
chris fleizach
Comment 6
2013-03-07 12:07:56 PST
http://trac.webkit.org/changeset/145116
Ryosuke Niwa
Comment 7
2013-03-07 20:24:44 PST
The test added by this patch as been failing on WebKit2:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20webkit.org&tests=platform%2Fmac%2Faccessibility%2Fpress-action-is-first.html
chris fleizach
Comment 8
2013-03-07 20:27:00 PST
(In reply to
comment #7
)
> The test added by this patch as been failing on WebKit2: >
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20webkit.org&tests=platform%2Fmac%2Faccessibility%2Fpress-action-is-first.html
I'll add a patch tonight Forgot to add a method to WebKitTestRunner
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug